--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="port.html" class="nav-item nav-link">Portfolio</a>
                             <a href="blog.html" class="nav-item nav-link">Blog</a>
-                            <a href="contact1.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="ms-auto d-none d-lg-block">
                             <a href="appoinment.html" class="btn btn-primary py-2 px-3">Book Appoinment</a>
@@ -184,9 +184,9 @@ From startups to enterprises, Branixo stands as a trusted technology partner, en
                 <div class="col-lg-6 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact1.html">Contact Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
                     <a class="btn btn-link" href="service.html">Our Services</a>
-                    <a class="btn btn-link" href="contact1.html">Support</a>
+                    <a class="btn btn-link" href="contact.html">Support</a>
                 </div>
             </div>
         </div>
