--- a/port.html
+++ b/port.html
@@ -31,11 +31,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="index.html" class="nav-item nav-link ">Home</a>
+                        <a href="index.html" class="nav-item nav-link ">Home </a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="port.html" class="nav-item nav-link active>Portfolio</a>
+                         <a href="service.html" class="nav-item nav-link">Services</a>
+                        <a href="port.html" class="nav-item nav-link active">Portfolio</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
+                       
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
