--- a/blog.html
+++ b/blog.html
@@ -217,10 +217,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-semi-bold" href="#">Muzna Bukhari</a>, All Right Reserved.
+                    &copy; <a class="fw-semi-bold" href="#">Branixo</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">Muzna Bukhari</a>
+                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">Designed by Our Team.</a>
                 </div>
             </div>
         </div>
