--- a/port.html
+++ b/port.html
@@ -278,7 +278,7 @@
                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
 
-                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">Muzna Bukhari</a>
+                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">Designed by Our Team.</a>
                 </div>
             </div>
         </div>
