--- a/about.html
+++ b/about.html
@@ -196,10 +196,10 @@ From startups to enterprises, Branixo stands as a trusted technology partner, en
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-semi-bold" href="#">Muzna Bukhari</a>, All Right Reserved.
+                    &copy; <a class="fw-semi-bold" href="#">Branixo</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">Muzna Bukhari</a>
+                    Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">Designed by Our Team.                    </a>
                 </div>
             </div>
         </div>
